<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainscreen"
    android:orientation="vertical"
    android:padding="10dp" >

    <View
        android:layout_width="1dp"
        android:layout_height="10dp" >
    </View>

    <View
        android:layout_width="1dp"
        android:layout_height="10dp" >
    </View>

    <Button
        android:id="@+id/iamready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:background="@layout/button_background"
        android:padding="5dp"
        android:text="@string/iamready" />

    <View
        android:layout_width="1dp"
        android:layout_height="10dp" >
    </View>

    <Button
        android:id="@+id/repeattut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@layout/button_background"
        android:padding="5dp"
        android:text="@string/repeatTutorials" />

    <View
        android:layout_width="1dp"
        android:layout_height="10dp" >
    </View>

    <Button
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@layout/button_background"
        android:padding="5dp"
        android:text="@string/faq" />

</LinearLayout>