<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:gravity="center_horizontal" >

    <TextView android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"/>

    <com.example.gamecontrollerdatatransfer.MultiTouchView
        android:id="@+id/multi_touch_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/xaxis"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yaxis"
                android:textSize="14sp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zaxis"
                android:textSize="14sp"
                android:visibility="invisible" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/x_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/y_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/z_axis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dip"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/buttonplaypause"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|right"
        android:contentDescription="@string/buttonplaypause"
        android:background="@drawable/pausebutton" />

    <ImageButton
        android:id="@+id/buttonreset"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="50dip"
        android:contentDescription="@string/buttonreset"
        android:background="@drawable/resetbutton" />

      <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/holdatrest"
        android:layout_marginTop="90dip"
        android:visibility="visible" 
        android:background="@null"
        android:gravity="center_horizontal|center_vertical" 
        />
</FrameLayout>