
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_page" />

        <!--
             This is an example layout containing thumbnail image buttons that, when pressed,
             zoom in to show more detail. All of the zooming and animation logic is in
             the ZoomActivity class.
        -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" >

            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_1"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginRight="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/position" />

            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_2"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:scaleType="centerCrop"
                android:src="@drawable/controls" />

            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_3"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginRight="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/buttons" />

            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_4"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tiltleft" />
</LinearLayout>
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" >
            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_5"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginRight="1dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tiltright" />
           
            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_6"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:src="@drawable/tiltdown"
                android:scaleType="centerCrop"
                />
            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_7"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginRight="1dp"
                android:src="@drawable/tiltup"
                android:scaleType="centerCrop"
                />
            <com.smartcontroller.clientside.TouchHighlightImageButton
                android:id="@+id/thumb_button_8"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:scaleType="centerCrop"
                android:src="@drawable/simulatebutton" />
        </LinearLayout>
    </LinearLayout>

    <!--
         This initially-hidden ImageView will hold the expanded/zoomed version of the
         images above. Without transformations applied, it takes up the entire screen.
         To achieve the "zoom" animation, this view's bounds are animated from the
         bounds of the thumbnail buttons above, to its final laid-out bounds. The implementation
         of this animation is in the ZoomActivity class.
    -->

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <View
            android:layout_width="1dp"
            android:layout_height="10dp" >
        </View>

        <Button
            android:id="@+id/iamready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:background="@layout/button_background"
            android:padding="5dp"
            android:text="@string/iamready" />
         <View
            android:layout_width="1dp"
            android:layout_height="10dp" >
        </View>

        <Button
            android:id="@+id/demovideo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:background="@layout/button_background"
            android:padding="5dp"
            android:text="@string/demovideo" />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp" >
        </View>

        <Button
            android:id="@+id/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@layout/button_background"
            android:padding="5dp"
            android:layout_marginTop="220dp"
            android:text="@string/faq" />

    </LinearLayout>

</FrameLayout>